linkedin.com/in/viml

--- a/vebphont/hscii.css
+++ b/vebphont/hscii.css
@@ -26,6 +26,15 @@
          url('fonts/u5cdot.svg#u5cdot') format('svg');
 }
 @font-face {
+    font-family: 'u5cn';
+    src: url('fonts/u5cn.eot');
+    src: url('fonts/u5cn.eot') format('embedded-opentype'),
+         url('fonts/u5cn.woff2') format('woff2'),
+         url('fonts/u5cn.woff') format('woff'),
+         url('fonts/u5cn.ttf') format('truetype'),
+         url('fonts/u5cn.svg#u5cn') format('svg');
+}
+@font-face {
     font-family: 'u5hp';
     src: url('uphonts/u5hp.eot');
     src: url('uphonts/u5hp.eot') format('embedded-opentype'),
