linkedin.com/in/viml

--- a/vebphont/hscii.css
+++ b/vebphont/hscii.css
@@ -133,3 +133,12 @@
          url('uphonts/binary_vertical_u82.ttf') format('truetype'),
          url('uphonts/binary_vertical_u82.svg#binary_vertical_u82') format('svg');
 }
+@font-face {
+    font-family: 'ssu5p';
+    src: url('fonts/ssu5p.eot');
+    src: url('fonts/ssu5p.eot') format('embedded-opentype'),
+         url('fonts/ssu5p.woff2') format('woff2'),
+         url('fonts/ssu5p.woff') format('woff'),
+         url('fonts/ssu5p.ttf') format('truetype'),
+         url('fonts/ssu5p.svg#ssu5p') format('svg');
+}
